--- a/001.org
+++ b/001.org
@@ -3,7 +3,7 @@
 
 Theirs is a mostly peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green at just the right frequency. The Crec are a sort of "cavemen". This word will be used unironically throughout. It's how they would describe themselves. In fact, they would fit a surprising number of your stereotypes about cavepeople.
 
-You will have seen the movie. They do wear minimal animal hide clothing. Wouldn't you? Would you waste hide? Would you skip the unnecessary second should strap from time to time? The do indeed look like living cartoons from time too time, though they don't know this.
+You will have seen the movie. They do wear minimal animal hide clothing. Wouldn't you? Would you waste hide? Would you skip the unnecessary second shoulder strap from time to time? They do indeed look like living cartoons from time to time, though they don't know this.
 
 They do in fact live in caves. Most of your Hollywood stereotypes are based on what regular, modern humans would invent or do to solve some particular problem, say for a screenplay, given only nature's resources; and that is what the Crec do also, unsurprisingly. It's no wonder regular people converge on many of the same solutions over and over again. That's why, say for example, unavoidably having to club a loved one over the head is in fact required on rare occasions. And have you ever tried to get out of the way of an enraged mother baboon? Sometimes you just grab a handful of hair and run for your life. Yes, there is clubbing. And dragging by the hair.
 
@@ -15,7 +15,7 @@ We will get to dinosaurs. It's complicated.
 
 And pretty much everyone lives in a cave, at least in Crec. Cave, the literal word meaning that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
 
-What's sometimes not so beautiful is how many cave opens often look like a rather droopy upper eyelid the morning after a socially-acceptable, generous quantity of good juff.
+What's sometimes not so beautiful is how many cave openings often look like a rather droopy upper eyelid the morning after a socially-acceptable, generous quantity of good juff.
 
 Fire produces smoke, and smoke must go /somewhere/. As the Crec saying goes, "Where there is fire, there is smoke." A bit of light in the early evening is nice. A bit of warmth is even nicer, but not always needed. All year long, fires get used for something or other. And that smoke makes a mess. You would be forgiven if you thought someone was trying to smoke someone else out of their cave. Of course that happens too. There's even a military refinement of this idea: Colonel Thag's Burrow Buster.
 
@@ -23,7 +23,7 @@ The Zog clan, whom you will soon meet, live in such a cave. A nice cave, for sur
 
 A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the grandkids to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat. The soot stains above the opening to the parlor were an especially large, especially shameful bit of soot-pallet. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing. Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
 
-Fires make for a cozy cave, and the grand matriarch Nud, Zog's seventh and it would turn out final wife, was the artful, watchful, and opinionated keeper of the fires. Usually this /would have/ meant schlepping wood every late evening to the point of exhaustion, and only after this is done would the cleaning, arranging and lighting take place. No longer! Nud was more the managerial type.
+Fires make for a cozy cave, and the grand matriarch Nud, Zog's seventh and it would turn out final wife, was the artful, watchful, and opinionated keeper of the fires. Usually this /would/ have meant schlepping wood every late evening to the point of exhaustion, and only after this is done would the cleaning, arranging and lighting take place. No longer! Nud was more the managerial type.
 
 She was currently shouting at Grav, Son of Zog, who was taking a well-earned rest in the ancient-speak burrow, sitting on what was agreed by all to be the most comfortable sit-ham-stone. It had several polished areas to prove its merit. Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point, among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud. It seemed like there was sometimes so much passion-inspired noise coming from his stepmother, it really didn't seem worth trying to mine for the gems (or "value-stone", which is used by the Crec in the same way we use the word "gem" sometimes: "I can't seem to find my favorite spiked club anywhere. It was a /real value-stone/!")
 
@@ -65,7 +65,7 @@ Grav's attention went back to Gher. "That's what /I/ keep saying." Hoping to sha
 
 ---
 
-Father-Brother Verk, Son of Jik had been sitting in the ancient-speak burrow accepting polite, and completely obligatory offers of refreshment, with forced modesty. 
+Father-Brother Verk, Son of Jik had been sitting in the ancient-speak burrow accepting polite—and completely obligatory offers of refreshment, with forced modesty. 
 
 Today Verk would tell all those who gathered (again, compulsory) in the ancient-speak burrow of The Battle of the Snake Meal during The Great Club War and the profound life lessons learned therein.
 
@@ -73,7 +73,7 @@ This wasn't the main objective of his visit, but this was a good crowd-warming t
 
 "Shall we all be quiet and let you begin Father-Brother Verk, Son of Jit?", one of the several-finger caveladies doting over him.
 
-"Oh, well. I just." Verk noisily deposited a healthy quantity of bird-scat into a finely woven, and yet unavoidably course rag. "Whaaaa... dortyses[fn:: This is an adjective that means 'rubbery and resistant to mastication']!!", he wailed at the ceiling as he sneezed. Verk had a severe allergy to a very poisonous flowering plant that more or less reproduced continuously.
+"Oh, well. I just." Verk noisily deposited a healthy quantity of bird-scat into a finely woven, and yet unavoidably coarse rag. "Whaaaa... dortyses[fn:: This is an adjective that means 'rubbery and resistant to mastication']!!", he wailed at the ceiling as he sneezed. Verk had a severe allergy to a very poisonous flowering plant that more or less reproduced continuously.
 
 "I'll get started. Thank you, rhino-calf."
 
@@ -106,7 +106,7 @@ We were the defenders, which favors one in battle. They had to do all the slow a
 
 Just then, my pal Lu and I realized that almost none of the troops were allowed to know about the boulder-rhino up at the top! We looked at each other seemingly at the same time and both had the idea at the same time. "Are you thinking what I'm thinking?", I said. "/Let's go!/", said Lu.
 
-There it was after a gasping, wheezing sprint up the steep hillside, our "secret" weapon. Why it was kept secret to most of /our guys/ I still do not know to this day. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to out there to the verge and give their life by dislodging the required stones, there not in that day being the idea yet of just tying some sturdy twist-vine to it and giving a pull from a safe distance.
+There it was after a gasping, wheezing sprint up the steep hillside, our "secret" weapon. Why it was kept secret to most of /our guys/ I still do not know to this day. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to go out there to the verge and give their life by dislodging the required stones, there not in that day being the idea yet of just tying some sturdy twist-vine to it and giving a pull from a safe distance.
 
 I had spied something on the way up and decided to have one over on old Lu. I say, "Well by rights, Lu, even as my friend, you need to be the one to go out there and do this. You know I got a family to support and my new position at camp comes with a lot of responsibility, one that there just ain't a lot of good replacements for. You think for a minute about what old Corporal Bogh would say in this situation. I'm sorry Lu, but I'm thinking of the Forest here. My hand to Ender-Of-All-Questions, this is my thinking, Lu. I'm sorry. I'll hear you out my friend, but..."
 
@@ -193,7 +193,7 @@ Snickers.
 "These men you are learning about today were quite capable and paid a high price; all of them. Miss, what have you done for your Forest lately?" That last bit Verk thought might have a bit more sting than intended.
 
 xxx awkward:
-There was a muttering in the audience, and the mood, as it had been pretty much all along, got to be ever more glum. Even during his speak Verk had seem off, distracted, irritated. Was he well?
+There was a muttering in the audience, and the mood, as it had been pretty much all along, got to be ever more glum. Even during his speak Verk had seemed 'off', distracted, irritated. Was he well?
 
 "Miss, I mean every bit of love and respect for you, rhino-calf. Let us reflect on what happened and the true magnitude of it. Let us never forget..."
 
@@ -223,7 +223,7 @@ He made a gesture of caressing his heart and nodding his head slowly with a smil
 
 "Sweet rhino-calf, what a precious question you ask. Can you say it again, real loudly so everyone can hear your question?"
 
-The girl perked up, faced the audience with cupped ands and in exaggerated toddler fashion, screamed impossibly loudly in the echoey burrow.
+The girl perked up, faced the audience, with hands cupped around her mouth, and in exaggerated toddler fashion screamed impossibly loudly in the echoey burrow.
 
 "WHY DO PEOPLE HAVE TO DIE?"
 
@@ -283,7 +283,7 @@ Verk's voice became calm, clear, and purposeful.
 
 "Here is what's what, you inept, disrespectful, ruinous young man." Verk closed his eyes and inhaled slowly and smoothly through his nose.
 
-"I know exactly what you are /thinking/, and what's more, I know exactly what you have /done/. It will not stand, and you will be made to pay. After which, I will grant you the privileged of getting on your knees before all and convincing us of your /genuine/ remorse and renewed understanding.
+"I know exactly what you are /thinking/, and what's more, I know exactly what you have /done/. It will not stand, and you will be made to pay. After which, I will grant you the privilege of getting on your knees before all and convincing us of your /genuine/ remorse and renewed understanding.
 
 You are my blood, and there is a bond and love that transcends almost all things. What you need to do is work hastily on the /almost/ before you cross a line, child."
 
