--- a/001.org
+++ b/001.org
@@ -1,25 +1,35 @@
 #+title: Verk Sends a Message
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="index.css" />
 
-Theirs is a mostly peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green at just the right frequency. The Crec are a sort of "cavemen". This word will be used unironically throughout. It's how they would describe themselves. In fact, they would fit a surprising number of your stereotypes about cavepeople.
+The Crec's is a peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green here and there. The Crec are a sort of "cavemen". This word will be used unironically throughout. It's how they would describe themselves. In fact, they would fit a surprising number of your stereotypes about cavepeople.
 
-You will have seen the movie. They do wear minimal animal hide clothing. Wouldn't you? Would you waste hide? Would you skip the unnecessary second shoulder strap from time to time? They do indeed look like living cartoons from time to time, though they don't know this.
+You will have seen the movie. They do wear minimal animal hide clothing. Wouldn't you? Would you waste hide? Would you skip the unnecessary second shoulder strap from time to time? They do indeed look /a bit/ like living cartoons, though they do not know this.
 
-They do in fact live in caves. Most of your Hollywood stereotypes are based on what regular, modern humans would invent or do to solve some particular problem, say for a screenplay, given only nature's resources; and that is what the Crec do also, unsurprisingly. It's no wonder regular people converge on many of the same solutions over and over again. That's why, say for example, unavoidably having to club a loved one over the head is in fact required on rare occasions. And have you ever tried to get out of the way of an enraged mother baboon? Sometimes you just grab a handful of hair and run for your life. Yes, there is clubbing. And dragging by the hair.
+They do in fact live in caves! Most of your Hollywood stereotypes are based on what regular, modern humans would invent or do to solve some particular problem, say for a screenplay, given only nature's resources; and that is what the Crec do also, unsurprisingly. It's no wonder that regular, modern people[fn:: For you and the Crec both /are/ modern humans.] converge on many of the same solutions.
 
-Clever analogs to modern vehicles? No, sadly. Those are in the future and they are not great, but warm, furry, if mangey backs abound (They do ride animals, which they domesticate, to a degree.) However, the distribution of tall, rather neat and symmetrical palm trees, and the way the verge of the nearby lagoon is here and there carpeted with some strikingly uniform and very green grass is just as you are thinking. There /are/ saber-toothed tigers. There are also furry, smelly, grumpy rhinoceros.
+That's why, say for example, unavoidably having to club a loved one over the head is in fact required on rare occasions. And have you ever tried to get out of the way of an enraged mother baboon? Sometimes you just grab a handful of hair and run for your life. Yes, there is clubbing. And dragging by the hair.
+
+Clever analogs to modern vehicles? No, sadly. Those are in the future and they are not great. But warm, furry, if mangey backs abound (They do ride animals, which they domesticate, to a degree.)
+
+However, the distribution of tall, rather neat and symmetrical palm trees, and the way the verge of the nearby lagoon is here and there carpeted with some strikingly uniform and very green grass is just as you are thinking. The Crec are not aware that they live in a place so beautiful that, from above, say from a hawk's point-of-view, it looks for all the world like a dioramist's "caveman days" passion project.
+
+There /are/ saber-toothed tigers. There are also furry, smelly, grumpy rhinoceros.
 
 It's rather beautiful. The Crec are aware, just as you are, that there is such a thing as timeless beauty.
 
 We will get to dinosaurs. It's complicated.
 
-And pretty much everyone lives in a cave, at least in Crec. Cave, the literal word meaning that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
+And pretty much everyone lives in a cave, at least in Crec. Cave, the literal word meaning exactly that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
 
-What's sometimes not so beautiful is how many cave openings often look like a rather droopy upper eyelid the morning after a socially-acceptable, generous quantity of good juff.
+What is sometimes not so beautiful is how many cave openings often look something like one's droopy, darkened upper eyelid the morning after a socially-acceptable, generous quantity of good juff. This effect is the result of centuries of smoke!
 
 Fire produces smoke, and smoke must go /somewhere/. As the Crec saying goes, "Where there is fire, there is smoke." A bit of light in the early evening is nice. A bit of warmth is even nicer, but not always needed. All year long, fires get used for something or other. And that smoke makes a mess. You would be forgiven if you thought someone was trying to smoke someone else out of their cave. Of course that happens too. There's even a military refinement of this idea: Colonel Thag's Burrow Buster.
 
-The Zog clan, whom you will soon meet, live in such a cave. A nice cave, for sure. The beautiful multi-orange, irregular cone in which the Zog clan live was at this point in time very much hollowed out. It was among the lighter mountains. The same family, all marriage and blood relations, all the way back to the times of Grut[fn:: The great] has occupied this hill, which was given the name Bhorv Zolk long ago. The name now has as much meaning to them as it does to you.
+The Zog clan, whom you will soon meet, live in such a cave. A nice cave, for sure.
+
+The enormous irregular mound of red rock in which the Zog clan lived was at this point in time very much hollowed out. It was among the lighter mountains.
+
+The same family, all marriage and blood relations, all the way back to the times of Grut[fn:: The great], has continuously occupied the inside of this hill, which was given the name Bhorv Zolk by some anonymous caveman long ago. The name now has as much meaning to them as it does to you.
 
 A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the grandkids to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat. The soot stains above the opening to the parlor were an especially large, especially shameful bit of soot-pallet. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing. Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
 
@@ -271,9 +281,11 @@ Verk's gaze caught Grav as he sauntered into the meal burrow. Grav had his usual
 
 Grav looked back, looked forward at the meal-burrow door and then swept his head back to Verk again. He was still staring, seemingly angrily. Grav smiled while their eyes remained locked and turned his head back in the direction he was headed in what he hoped was a polite, demur manor. Verk stood motionless as only his head followed the progress of Grav across the burrow. It appeared that his hands were slowly making fists. /He's probably just flexing his fingers/, Grav thought lamely. He'd have to get over Verk. Food!
 
-Much later, after a responsible (given the occasion) amount of juff and enough to eat (plus half again) for everyone, Grav found himself standing, bowed gently backwards, with most of his weight on his heels, urinating into the relief-hole at the far back arc of the relief-room. A couple of laughing, squealing almost-fertile baby-makers thoroughly woke everyone up as they darted behind him and out of the relief-room[fn:: Bathrooms are not separated by gender. This would strike the Crec as a truly inefficient and pointless arrangement.] enjoying their private joke; almost surely at the expense of some hapless teenage boy.
+Much later, after a responsible (given the occasion) amount of juff and enough to eat for everyone, plus half again, Grav found himself standing, bowed gently backwards, with most of his weight on his heels, urinating contentedly on the wall at the far-back arc of the circular relief-room.
 
-To Grav's utter horror, and with an exaggerated shuffling of the feet Verk got situated in front of the relief-hole right next to him. He was smiling serenely, swaying almost imperceptibly, and reeking of juff and female-hippo-musk[fn:: Female hippo musk is indeed used as a perfume. However, as this is scarce and valuable, it is also used to just mean "perfume" or "cologne"].
+A couple of laughing, squealing almost-fertile baby-makers thoroughly woke everyone up as they darted behind him and out of the relief-room[fn:: Bathrooms are not separated by gender. This would strike the Crec as a truly inefficient and pointless arrangement.] enjoying their private joke; almost surely at the expense of some hapless teenage boy.
+
+To Grav's utter horror, and with an exaggerated shuffling of the feet, Verk slowly situated himself for a good piss right next to him. He was smiling serenely, swaying almost imperceptibly, and reeking of juff and female-hippo-musk[fn:: Female hippo musk is indeed used as a perfume. However, as this is scarce and valuable, it is also used to just mean "perfume" or "cologne"].
 
 "My noble, hopeful, young elk-buck. It's Grav, yes? Grav, Son Of Zog Many-Follow-Then Son of Grut? I wonder what you have planned for succession." One eyebrow wagging. "I don't see or hear of any intrigue involving your brothers, younger all of them. Seems they have other plans and are happy with them. Here comes Grav clan, yes?", Verk says and winks drunkenly.
 
