--- a/001.org
+++ b/001.org
@@ -189,8 +189,7 @@ A girl in her late teens, that could only charitably be considered a child stood
 
 "Father-Brother Verk," Verk thought she had rushed the whole name part. "Were there any other things we could have done to avoid all this dying, for everybody? Like..." She looked around. "could we just maybe get along with and share with the other tribe? After all, Nature has given us all this. Who has the claim?"
 
-xxxx something dangling:
-Verk knew that putting his hand anywhere near his face, it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think, for example.
+Verk knew that if he put his hand anywhere near his face it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think, for example.
 
 "Miss." He thought he would mix in just a dash of good-talking-to, as a signal to others as well. "I believe a lot of dedicated Forest Heroes put in a lot of blood, sweat, and dare I say lives, in far too many cases."
 
@@ -202,8 +201,7 @@ Snickers.
 
 "These men you are learning about today were quite capable and paid a high price; all of them. Miss, what have you done for your Forest lately?" That last bit Verk thought might have a bit more sting than intended.
 
-xxx awkward:
-There was a muttering in the audience, and the mood, as it had been pretty much all along, got to be ever more glum. Even during his speak Verk had seemed 'off', distracted, irritated. Was he well?
+There was a muttering in the audience. The mood, was becoming ever more glum. Even during his speak Verk had seemed 'off', distracted, irritated. Was he well?
 
 "Miss, I mean every bit of love and respect for you, rhino-calf. Let us reflect on what happened and the true magnitude of it. Let us never forget..."
 
