--- a/Appendix.org
+++ b/Appendix.org
@@ -126,7 +126,7 @@ In fact, the Crec quite literally are thinking "a part of a circle", the way to 
 
 ** Volume
 
-- gourd: about have a liter
+- gourd: about half a liter
 
 ** Length/Distance
 
