--- a/Appendix.org
+++ b/Appendix.org
@@ -131,7 +131,7 @@ In fact, the Crec quite literally are thinking "a part of a circle", the way to 
 ** Length/Distance
 
 - bowstring-finger-knuckle: about 2cm (the distance from the tip of an average adult male's index finger to the first knuckle)
-man: about 6 feet
+- man: about 6 feet ("you?")
 - palm: The distance one /walks/ in a single palm (of time) -- about two miles.
 - drop-stone: 189 meters (approximately 100 man) -- the distance /sound/ travels in one drop-stone (just over half a second). This sounds like a preposterous concept for a caveman's reckoning of distance. It is not! The idea is very simple: One person makes a **sound** whose occurrence is obvious **visually**; for example, hitting a large skin drum with a large, conspicuous [drum]stick. The drum can be heard literally for miles. One can see the drummer /striking/ the drum, for a very long way on flat, level ground [as will be the case for this procedure, usually]. Another person will adjust their distance, by gradually backing away, such that, if the a stone is dropped from shoulder-hight when the drum beat is /seen/ and hits the ground when the sound arrives, the two cavepersons can be said to be "one drop-stone away from each other. Adoption of this was slow, as it was difficult to convince the average caveperson that sound travels at a /constant/ speed (obviously!) In modern visual arts, the clapperboard has a similar function.
 
