--- a/Spoilers.org
+++ b/Spoilers.org
@@ -44,6 +44,11 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
+- We eventually find that you can say "BS" in place of "Boulder-Stump" and for some reason be totally OK (long explanation of translator's choices when terming it "BS".)
+- It would be awesome if when Verk kicks it, they find a great big tumor (heh. maybe he falls off a cliff and this grey turd comes oozing out of his skull amidst his brains. The Crec know, "this ain't right"). Knowing "this ain't right", they ponder the possibility that this might have been a/the /cause/ for all the fun Verk features.
+- Self Marriage ceremony (no, this is not "gay"): The Crec have a Self-Marriage ceremony, where the caveboy-coming-of-age takes a bunch of wedding vows about loving himself no matter what. This among men is considered waaay more important than the other kinds of marriage. It is here where we revisit some of Grav's delightful encounters with Verk.
+- It turns out Zog is a really good dude. His son, Grav think's he's pretty awesome except for one quirk: He defends Brother Verk no matter what and is willfully blind to any amount of evidence.
+- Verk has a son named XXX (actually, that'd be a pretty good name). He is clearly dramatized by having Verk as a dad and just runs out the clock doing some (sometimes shockingly) cool stuff. Fiddles with this and that, stays out of Verk's way, is quietly an unobtrusive genius occasionally. Is deferential to the point of nausea. Don't want no trouble. Talks very little.
 - Someone speculates that the outer perimiter crack of the stick-stone/devil-fish-stone is so sharp because the outside had been polished by Nature. Otherwise it would be jagged. Reproducible of course.
 - Capitalization of Workers explained: they got together, decided to spring the union thing on G&G, who were more than prepared. The workers would shout, "THE WORKERS!" at the end of every other utterance (but only when appearing as a group) and so after literally hours of negotiation, the compromised on having their so-called superiors refer to them as a group in the same way: No matter in what context, when refering to the workers, according to the bylaws of G&G, had to make an effort to enthusiastically shout, e.g. "Hey, Guff, some of /THE WORKERS/ are late this dawn. Do you know of any reason?" All were satisfied with the arrangement.
 - The reason they keep fucking up on standardizing certain measurements is that they literally have not yet thought of the possibility of these things varying. Crec were Crec.
