--- a/Spoilers.org
+++ b/Spoilers.org
@@ -46,7 +46,7 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 - We eventually find that you can say "BS" in place of "Boulder-Stump" and for some reason be totally OK (long explanation of translator's choices when terming it "BS".)
 - It would be awesome if when Verk kicks it, they find a great big tumor (heh. maybe he falls off a cliff and this grey turd comes oozing out of his skull amidst his brains. The Crec know, "this ain't right"). Knowing "this ain't right", they ponder the possibility that this might have been a/the /cause/ for all the fun Verk features.
-- Self Marriage ceremony (no, this is not "gay"): The Crec have a Self-Marriage ceremony, where the caveboy-coming-of-age takes a bunch of wedding vows about loving himself no matter what. This among men is considered waaay more important than the other kinds of marriage. It is here where we revisit some of Grav's delightful encounters with Verk.
+- Self Marriage ceremony (no, this is not "gay"): The Crec have a Self-Marriage ceremony, where the caveboy-coming-of-age takes a bunch of wedding vows about loving himself no matter what. Nobody laughs, a few ol' gits cry. This among men is considered waaay more important than the other kinds of marriage. It is here where we revisit some of Grav's delightful encounters with Verk.
 - It turns out Zog is a really good dude. His son, Grav think's he's pretty awesome except for one quirk: He defends Brother Verk no matter what and is willfully blind to any amount of evidence.
 - Verk has a son named XXX (actually, that'd be a pretty good name). He is clearly dramatized by having Verk as a dad and just runs out the clock doing some (sometimes shockingly) cool stuff. Fiddles with this and that, stays out of Verk's way, is quietly an unobtrusive genius occasionally. Is deferential to the point of nausea. Don't want no trouble. Talks very little.
 - Someone speculates that the outer perimiter crack of the stick-stone/devil-fish-stone is so sharp because the outside had been polished by Nature. Otherwise it would be jagged. Reproducible of course.
@@ -64,9 +64,9 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 - I like the expression "thou dost smite meeee!"[fn:: Notice, not a question like 'why...?', this is The-Ender you are talking to.] as a ritual kind of thing that's as unconscious as "Allahu Akbar" or "Bless You". But screamed at the sky during the hight of frustration, of course. Sometimes, as the "eeeeeeeee" is lengthened, the frustration goes vertical, as someone is high up a tree wrenching on a beehive. Usually, this last jerk of rage-derived power is enough to at least "unstick" the frustrating situation (You might imagine the beehive coming loose and the caveman falling 4 stories onto packed mud, the last 'eeee...' trails off as he lays in his crater.)
 - The word "think-long" is the transliteration of the compound word of theirs tha means "rational" in pretty much the sense that we mean it. It is a slur because, while it has been observed that rational thought bears good results often, the overwhelming majority of data showed that, when your life depends on it, as it nearly always does, relying on the supernatural bears better results. Therefore, being think-long (rational) is to just waste time and look like a good, naive target for pouncing instead of learning and practicing The Art that would likely save your life one day. rational: insult.
 - The big reveal at the end: bad 'bad' guys and 'good' guys literally just go their separate ways.
-- ZoMG, drugs! The Forest abounds with drugs. All the bluehairs (and everyone?) take some brain-melting psychedelic (thing), which is considered wholesome and old-fashioned. It's booth their wine and their sacrament wine. Pretty much everything else is devil weed, but G&G are bold, fit psychonauts and experience trips that would be considered trips from the perspective of fuddy-duddy trips. Importantly, when they meet up with the girls, there are lots of drugs and of course monkey-business (oh, that's good. let's make that just mean "fucking" and there can be a polite word for "baby-making" ...)
+- ZoMG, drugs! The Forest abounds with drugs. All the bluehairs (and everyone?) take some brain-melting psychedelic (thing), which is considered wholesome and old-fashioned. It's both their sacrament wine and their cut loose on Friday wine. No big deal, old Uncle Elmer is talking to future alien trolls, just like in the good old days. Pretty much everything else is devil weed, but G&G are bold, fit psychonauts and experience trips that would be considered trips from the perspective of fuddy-duddy trips. Importantly, when they meet up with the girls, there are lots of drugs and of course monkey-business (oh, that's good. let's make that just mean "fucking" and there can be a polite word for "baby-making" ...)
 - The Helpful Monkey is a river that flows southward (xxxfancy name for south) towards Bhorv Zolk. Its start is the confluence of an eastern branch, The Lame Rhino [tigris], and a western branch, The Great Meal Stone [Euphrates]. All together they make a Y with the bottom, virtical part pointing southwards to at Bhorv Zolk. Yes, you can look at a map of the fertile crescent. This is all just for ease-of-recall and rough geographical reckoning.
-- I said "pre flowering plants", didn't I? 1) this probably impossible [maybe who cares], 2) "banana", "melon", "gourd"...will have to rethink. All this because I wanted to use "uvula" instead of "pea"?
+- [nope! we have flowering plants. we /need/ flowering plants.] I said "pre flowering plants", didn't I? 1) this probably impossible [maybe who cares], 2) "banana", "melon", "gourd"...will have to rethink. All this because I wanted to use "uvula" instead of "pea"?
 - Brother -> Bro is purposely propagated among the Crec. Soon cave/men/ are calling each other "bro". Then there is a great buggery scandal in "the military" during which, from one of their discussions, comes the hilarious idea of "bro-ham: a male buttocks used as a substitute for cavewomen (we need a good word for 'vag')" As in, "Out on deployment and away from your wives for moons at a time? Worry not! bro-ham abound."
 - The mysterious forest babes: G&G, on one of their especially distant and daring excursions, near the border with xxx yet-anther-another-another-hated-neighboring-Forest xxx. They are sinewy, flexible, and fit. And they don't sweat much. They are giggly and have absolutely no overlapping language with G&G but they somehow manage to find a way to agree to meet back at this very spot (don't forget) exactly these many moons from now (don't forget or miscalculate). And they have fun. Bouncy-bouncy. They are like a bizzaro G&G, but baby-makers (although in literal terms, G&G thought of babies very little). They were ingenious and mysterious like G&G. They thought freely (oh so freely). And loved a bit of mischief of any kind.
 - Needs uniformity, rules, standardization:
