--- a/Spoilers.org
+++ b/Spoilers.org
@@ -59,13 +59,12 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 - Somebody notices that if you twist three fibers one way and wound them the /other/ way, you'd have some twist-vine that is not bouncy and doesn't twist when it's not supposed to.
 - There needs to be Ernest. T. Bass/Leroy Jenkins character that is nice-junlge-term-for-crazy and injects harmless randomness all the time.
 - Now is your chance: invent an animal that, instead of giving birth, lets its babies gradually it it from the inside out, hunting for food until it becomes impossible, then drops dead and is eaten some more. Then something furry, adorable, and covered with rotted gore climbs out.
-- Wolf-Sleep: To meditate peacefully by actively observing all possible sensory input, minus vision. Learning to actively monitor every inch of your skin, every sound you hear, perhaps the taste of lunch leftover from earlier, one can paradoxically become quite calm and contented. This is called Wolf-Sleep, because once the trick is mastered, practitioners, always observing their breath, from thoat outward, would be able to jump into the relaxed sensation with ever more ease, which reliably made their third, fourth of fifth breath a big, relaxed, satisfying, full-body "huffffffff...." that observers of wolves and modern dog owners are familiar with.
 - "Now, Gak, you've got a situation here with that boy of yours. He's mostly just runnin' around messin' with his stick and hanging out with girls. See, if he was an all-finger or more, that'd be good news for you, 'grandpa', but sometimes it's just unseemly. I saw him smelling a quiet-one's pile. Time was, you could drown a wretched runt like that in the river with a good hemp basket and a rock. The do-gooder Forest-Deer and there meddlin in family life put an end to that! But..."
 - I like the expression "thou dost smite meeee!"[fn:: Notice, not a question like 'why...?', this is The-Ender you are talking to.] as a ritual kind of thing that's as unconscious as "Allahu Akbar" or "Bless You". But screamed at the sky during the hight of frustration, of course. Sometimes, as the "eeeeeeeee" is lengthened, the frustration goes vertical, as someone is high up a tree wrenching on a beehive. Usually, this last jerk of rage-derived power is enough to at least "unstick" the frustrating situation (You might imagine the beehive coming loose and the caveman falling 4 stories onto packed mud, the last 'eeee...' trails off as he lays in his crater.)
 - The word "think-long" is the transliteration of the compound word of theirs tha means "rational" in pretty much the sense that we mean it. It is a slur because, while it has been observed that rational thought bears good results often, the overwhelming majority of data showed that, when your life depends on it, as it nearly always does, relying on the supernatural bears better results. Therefore, being think-long (rational) is to just waste time and look like a good, naive target for pouncing instead of learning and practicing The Art that would likely save your life one day. rational: insult.
 - The big reveal at the end: bad 'bad' guys and 'good' guys literally just go their separate ways.
 - ZoMG, drugs! The Forest abounds with drugs. All the bluehairs (and everyone?) take some brain-melting psychedelic (thing), which is considered wholesome and old-fashioned. It's both their sacrament wine and their cut loose on Friday wine. No big deal, old Uncle Elmer is talking to future alien trolls, just like in the good old days. Pretty much everything else is devil weed, but G&G are bold, fit psychonauts and experience trips that would be considered trips from the perspective of fuddy-duddy trips. Importantly, when they meet up with the girls, there are lots of drugs and of course monkey-business (oh, that's good. let's make that just mean "fucking" and there can be a polite word for "baby-making" ...)
-- The Helpful Monkey is a river that flows southward (xxxfancy name for south) towards Bhorv Zolk. Its start is the confluence of an eastern branch, The Lame Rhino [tigris], and a western branch, The Great Meal Stone [Euphrates]. All together they make a Y with the bottom, virtical part pointing southwards to at Bhorv Zolk. Yes, you can look at a map of the fertile crescent. This is all just for ease-of-recall and rough geographical reckoning.
+- The Helpful Monkey is a river that flows towards morning-sun-right-side towards Bhorv Zolk. Its start is the confluence of an eastern branch, The Lame Rhino [tigris], and a western branch, The Great Meal Stone [Euphrates]. All together they make a Y with the bottom, virtical part pointing southwards to at Bhorv Zolk. Yes, you can look at a map of the fertile crescent. This is all just for ease-of-recall and rough geographical reckoning.
 - [nope! we have flowering plants. we /need/ flowering plants.] I said "pre flowering plants", didn't I? 1) this probably impossible [maybe who cares], 2) "banana", "melon", "gourd"...will have to rethink. All this because I wanted to use "uvula" instead of "pea"?
 - Brother -> Bro is purposely propagated among the Crec. Soon cave/men/ are calling each other "bro". Then there is a great buggery scandal in "the military" during which, from one of their discussions, comes the hilarious idea of "bro-ham: a male buttocks used as a substitute for cavewomen (we need a good word for 'vag')" As in, "Out on deployment and away from your wives for moons at a time? Worry not! bro-ham abound."
 - The mysterious forest babes: G&G, on one of their especially distant and daring excursions, near the border with xxx yet-anther-another-another-hated-neighboring-Forest xxx. They are sinewy, flexible, and fit. And they don't sweat much. They are giggly and have absolutely no overlapping language with G&G but they somehow manage to find a way to agree to meet back at this very spot (don't forget) exactly these many moons from now (don't forget or miscalculate). And they have fun. Bouncy-bouncy. They are like a bizzaro G&G, but baby-makers (although in literal terms, G&G thought of babies very little). They were ingenious and mysterious like G&G. They thought freely (oh so freely). And loved a bit of mischief of any kind.
